# OS161

./: CMakeLists.txt  README.md
kern/arch/mips/conf/: conf.arch
kern/arch/mips/include/: trapframe.h  types.h  vm.h
kern/arch/mips/locore/: trap.c
kern/arch/mips/syscall/: syscall.c
kern/arch/mips/vm/: dumbvm.c  ram.c  smartvm.c
kern/arch/sys161/dev/: lamebus_machdep.c
kern/conf/: conf.kern
kern/dev/lamebus/: lamebus.c
kern/include/: addrspace.h  filehandle.h  filetable.h  pagetable.h  proc.h  processtable.h  spinlock.h  synch.h  syscall.h  threadlist.h  uio.h  vm.h
kern/include/kern/: fcntl.h
kern/lib/: kprintf.c  uio.c
kern/main/: main.c  menu.c
kern/proc/: proc.c  processtable.c
kern/synchprobs/: stoplight.c  whalemating.c
kern/syscall/: chdir_syscalls.c  close_syscalls.c  dup2_syscalls.c  execv_syscalls.c  exit_syscalls.c  fork_syscalls.c  getcwd_syscalls.c  getpid_syscalls.c  loadelf.c  lseek_syscalls.c  open_syscalls.c  read_syscalls.c  runprogram.c  sbrk_syscalls.c  time_syscalls.c  waitpid_syscalls.c  write_syscalls.c
kern/test/: kmalloctest.c  synchprobs.c  synchtest.c
kern/thread/: spinlock.c  synch.c  thread.c  threadlist.c
kern/vfs/: filetable.c  pagetable.c  vfslookup.c  vfspath.c
kern/vm/: addrspace.c  kmalloc.c
mk/: os161.kernel.mk
userland/lib/libc/time/: time.c
userland/sbin/reboot/: reboot.c
userland/testbin/badcall/: bad_dup2.c  bad_waitpid.c
userland/testbin/consoletest/: consoletest.c
userland/testbin/fileonlytest/: fileonlytest.c
userland/testbin/forkbomb/: forkbomb.c
userland/testbin/forktest/: forktest.c
userland/testbin/redirect/: redirect.c
userland/testbin/sbrktest/: sbrktest.c
